<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/layout_row1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_num_textview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textAlignment="center"
            android:textColor="@color/gold"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_delete" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/SelectableItemBackgroundDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/deleteText"
            android:textColor="@color/gold"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_num_textview"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_row2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_row">

        <Button
            android:id="@+id/btn_num1"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num1"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num2"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num2"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num3"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num3"
            android:textSize="@dimen/num_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_row3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_row1">

        <Button
            android:id="@+id/btn_num4"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num4"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num5"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num5"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num6"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num6"
            android:textSize="@dimen/num_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_row4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_row2">

        <Button
            android:id="@+id/btn_num7"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num7"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num8"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num8"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num9"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num9"
            android:textSize="@dimen/num_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_row3">

        <Button
            android:id="@+id/btn_num_asterisk"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/asterisk"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num0"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/num0"
            android:textSize="@dimen/num_size" />

        <Button
            android:id="@+id/btn_num_hash"
            style="@style/SelectableItemBackgroundGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/hash"
            android:textSize="@dimen/num_size" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_row4">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_call"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:clickable="true"
            android:contentDescription="@string/callDescript"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:foregroundGravity="center_vertical|clip_horizontal|clip_vertical|center_horizontal"
            android:src="@mipmap/call_btn_1_background"
            app:backgroundTint="@color/white"
            app:fabCustomSize="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bottom_divider_right"
            app:layout_constraintStart_toEndOf="@+id/bottom_divider_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.514"
            app:maxImageSize="80dp"
            app:rippleColor="@color/gold"
            app:tint="@null" />

        <View
            android:id="@+id/bottom_divider_left"
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_call"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/bottom_divider_right"
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_call"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/top_divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/layout_row1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_row" />


</androidx.constraintlayout.widget.ConstraintLayout>